fix flickering on feed

--- a/packages/app/src/views/styles.css
+++ b/packages/app/src/views/styles.css
@@ -20,6 +20,8 @@
   -ms-flex-align: center;
   -webkit-align-items: center;
   align-items: center;
+  -webkit-transform: translateZ(0);
+  -webkit-backface-visibility: hidden;
 }
 
 .swiper-slide img {
